--- a/Train/Engine.TCMS.Turkmenistan/Src/Engine.TCMS.Turkmenistan/View/Buttons/ButtonView.xaml
+++ b/Train/Engine.TCMS.Turkmenistan/Src/Engine.TCMS.Turkmenistan/View/Buttons/ButtonView.xaml
@@ -21,26 +21,26 @@
             Grid.Column="0"
             Command="{Binding Model.CurrentStateInterface.BtnF1.ClickCommand}"
             Content="{Binding Model.CurrentStateInterface.BtnF1.Content}"
-            Style="{StaticResource DownButtonStyle}" />
+            Style="{DynamicResource DownButtonStyle}" />
         <Button
             Grid.Column="1"
             Command="{Binding Model.CurrentStateInterface.BtnF2.ClickCommand}"
             Content="{Binding Model.CurrentStateInterface.BtnF2.Content}"
-            Style="{StaticResource DownButtonStyle}" />
+            Style="{DynamicResource DownButtonStyle}" />
         <Button
             Grid.Column="2"
             Command="{Binding Model.CurrentStateInterface.BtnF3.ClickCommand}"
             Content="{Binding Model.CurrentStateInterface.BtnF3.Content}"
-            Style="{StaticResource DownButtonStyle}" />
+            Style="{DynamicResource DownButtonStyle}" />
         <Button
             Grid.Column="3"
             Command="{Binding Model.CurrentStateInterface.BtnF4.ClickCommand}"
             Content="{Binding Model.CurrentStateInterface.BtnF4.Content}"
-            Style="{StaticResource DownButtonStyle}" />
+            Style="{DynamicResource DownButtonStyle}" />
         <Button
             Grid.Column="4"
             Command="{Binding Model.CurrentStateInterface.BtnF5.ClickCommand}"
             Content="{Binding Model.CurrentStateInterface.BtnF5.Content}"
-            Style="{StaticResource DownButtonStyle}" />
+            Style="{DynamicResource DownButtonStyle}" />
     </Grid>
 </UserControl>
