--- a/Train/Engine.TCMS.Turkmenistan/Src/Engine.TCMS.Turkmenistan/View/Contents/AxleTemperature/CurrentAxleView.xaml
+++ b/Train/Engine.TCMS.Turkmenistan/Src/Engine.TCMS.Turkmenistan/View/Contents/AxleTemperature/CurrentAxleView.xaml
@@ -69,12 +69,12 @@
                                 <ColumnDefinition></ColumnDefinition>
                                 <ColumnDefinition></ColumnDefinition>
                             </Grid.ColumnDefinitions>
-                            <TextBlock Grid.Row="0" Grid.Column="0" Text="10" Foreground="White" FontSize="{StaticResource Double12}" HorizontalAlignment="Center"></TextBlock>
-                            <TextBlock Grid.Row="1" Grid.Column="0" Text="20" Foreground="White" FontSize="{StaticResource Double12}" HorizontalAlignment="Center"></TextBlock>
-                            <TextBlock Grid.Row="2" Grid.Column="0" Text="65" Foreground="White" FontSize="{StaticResource Double12}" HorizontalAlignment="Center"></TextBlock>
-                            <TextBlock Grid.Row="0" Grid.Column="1" Text="31" Foreground="White" FontSize="{StaticResource Double12}" HorizontalAlignment="Left"></TextBlock>
-                            <TextBlock Grid.Row="1" Grid.Column="1" Text="31" Foreground="White" FontSize="{StaticResource Double12}" HorizontalAlignment="Left"></TextBlock>
-                            <TextBlock Grid.Row="2" Grid.Column="1" Text="44" Foreground="White" FontSize="{StaticResource Double12}" HorizontalAlignment="Left"></TextBlock>
+                            <TextBlock Grid.Row="0" Grid.Column="0" Text="10" Foreground="White" FontSize="{DynamicResource Double12}" HorizontalAlignment="Center"></TextBlock>
+                            <TextBlock Grid.Row="1" Grid.Column="0" Text="20" Foreground="White" FontSize="{DynamicResource Double12}" HorizontalAlignment="Center"></TextBlock>
+                            <TextBlock Grid.Row="2" Grid.Column="0" Text="65" Foreground="White" FontSize="{DynamicResource Double12}" HorizontalAlignment="Center"></TextBlock>
+                            <TextBlock Grid.Row="0" Grid.Column="1" Text="31" Foreground="White" FontSize="{DynamicResource Double12}" HorizontalAlignment="Left"></TextBlock>
+                            <TextBlock Grid.Row="1" Grid.Column="1" Text="31" Foreground="White" FontSize="{DynamicResource Double12}" HorizontalAlignment="Left"></TextBlock>
+                            <TextBlock Grid.Row="2" Grid.Column="1" Text="44" Foreground="White" FontSize="{DynamicResource Double12}" HorizontalAlignment="Left"></TextBlock>
                         </Grid>
                      
                     </Border>
