--- a/Train/Engine.TCMS.Turkmenistan/Src/Engine.TCMS.Turkmenistan/View/Contents/ProgressBar/CurrentProgressbarView.xaml
+++ b/Train/Engine.TCMS.Turkmenistan/Src/Engine.TCMS.Turkmenistan/View/Contents/ProgressBar/CurrentProgressbarView.xaml
@@ -200,39 +200,39 @@
                     </Grid.ColumnDefinitions>
                     <TextBlock
                         Grid.Column="1"
-                        Style="{StaticResource MainTextStyle5}"
+                        Style="{DynamicResource MainTextStyle5}"
                         Text="{DynamicResource CurrentCar}" />
                     <TextBlock
                         Grid.Column="2"
-                        Style="{StaticResource MainTextStyle5}"
+                        Style="{DynamicResource MainTextStyle5}"
                         Text="{DynamicResource DieselEngineSpeed1}" />
                     <TextBlock
                         Grid.Column="3"
-                        Style="{StaticResource MainTextStyle5}"
+                        Style="{DynamicResource MainTextStyle5}"
                         Text="{DynamicResource OthertCar}" />
                     <TextBlock
                         Grid.Column="5"
-                        Style="{StaticResource MainTextStyle5}"
+                        Style="{DynamicResource MainTextStyle5}"
                         Text="{DynamicResource CurrentCar}" />
                     <TextBlock
                         Grid.Column="6"
-                        Style="{StaticResource MainTextStyle5}"
+                        Style="{DynamicResource MainTextStyle5}"
                         Text="{DynamicResource OilPressure}" />
                     <TextBlock
                         Grid.Column="7"
-                        Style="{StaticResource MainTextStyle5}"
+                        Style="{DynamicResource MainTextStyle5}"
                         Text="{DynamicResource OthertCar}" />
                     <TextBlock
                         Grid.Column="9"
-                        Style="{StaticResource MainTextStyle5}"
+                        Style="{DynamicResource MainTextStyle5}"
                         Text="{DynamicResource CurrentCar}" />
                     <TextBlock
                         Grid.Column="10"
-                        Style="{StaticResource MainTextStyle5}"
+                        Style="{DynamicResource MainTextStyle5}"
                         Text="{DynamicResource CoolingWaterTemperature}" />
                     <TextBlock
                         Grid.Column="11"
-                        Style="{StaticResource MainTextStyle5}"
+                        Style="{DynamicResource MainTextStyle5}"
                         Text="{DynamicResource OthertCar}" />
 
                 </Grid>
