--- a/Train/Engine.TCMS.Turkmenistan/Src/Engine.TCMS.Turkmenistan/Resources/Styles/TurkmenistanButtonStyle.xaml
+++ b/Train/Engine.TCMS.Turkmenistan/Src/Engine.TCMS.Turkmenistan/Resources/Styles/TurkmenistanButtonStyle.xaml
@@ -1,4 +1,7 @@
-﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+﻿<ResourceDictionary
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:model="clr-namespace:Engine.TCMS.Turkmenistan.Model">
 
     <ResourceDictionary.MergedDictionaries>
         <ResourceDictionary Source="../Base/TurkmenistanBaseResource.xaml" />
@@ -11,8 +14,8 @@
             <Setter.Value>
                 <ControlTemplate TargetType="Button">
                     <Border
-                        Background="{StaticResource ContentBackgroundBrush}"
-                        BorderBrush="{StaticResource HarwareButtonWhiteBrush}"
+                        Background="{DynamicResource ContentBackgroundBrush}"
+                        BorderBrush="{DynamicResource HarwareButtonWhiteBrush}"
                         BorderThickness="2,2,0,0">
                         <TextBlock
                             HorizontalAlignment="Center"
@@ -24,7 +27,7 @@
         </Setter>
         <Setter Property="HorizontalContentAlignment" Value="Center" />
         <Setter Property="VerticalContentAlignment" Value="Center" />
-        <Setter Property="Foreground" Value="{StaticResource HarwareButtonWhiteBrush}" />
+        <Setter Property="Foreground" Value="{DynamicResource HarwareButtonWhiteBrush}" />
         <Setter Property="FontSize" Value="18" />
     </Style>
     <Style x:Key="MainViewDateStyle" TargetType="Button">
@@ -46,15 +49,15 @@
         </Setter>
         <Setter Property="Background" Value="Black" />
         <Setter Property="BorderThickness" Value="1" />
-        <Setter Property="BorderBrush" Value="{StaticResource ForegroundWhiteBrush}" />
+        <Setter Property="BorderBrush" Value="{DynamicResource ForegroundWhiteBrush}" />
         <Setter Property="Margin" Value="1" />
-        <Setter Property="Foreground" Value="{StaticResource MainTextBrushOne}" />
-        <Setter Property="FontSize" Value="{StaticResource Double20}" />
+        <Setter Property="Foreground" Value="{DynamicResource MainTextBrushOne}" />
+        <Setter Property="FontSize" Value="{DynamicResource Double20}" />
     </Style>
     <Style x:Key="AxleInfoButtonTextStyle1" TargetType="Button">
         <Setter Property="Background" Value="Black" />
         <Setter Property="Foreground" Value="White" />
-        <Setter Property="FontSize" Value="{StaticResource Double18}" />
+        <Setter Property="FontSize" Value="{DynamicResource Double18}" />
         <Setter Property="HorizontalContentAlignment" Value="Center" />
         <Setter Property="VerticalContentAlignment" Value="Center" />
         <Setter Property="Template">
@@ -73,7 +76,7 @@
     <Style x:Key="AxleInfoButtonTextStyle2" TargetType="Button">
         <Setter Property="Background" Value="Black" />
         <Setter Property="Foreground" Value="White" />
-        <Setter Property="FontSize" Value="{StaticResource Double18}" />
+        <Setter Property="FontSize" Value="{DynamicResource Double18}" />
         <Setter Property="HorizontalContentAlignment" Value="Left" />
         <Setter Property="Padding" Value="5,0,0,2" />
         <Setter Property="VerticalContentAlignment" Value="Bottom" />
@@ -93,7 +96,7 @@
     <Style x:Key="AxleInfoButtonTextStyle3" TargetType="Button">
         <Setter Property="Background" Value="#454449" />
         <Setter Property="Foreground" Value="White" />
-        <Setter Property="FontSize" Value="{StaticResource Double18}" />
+        <Setter Property="FontSize" Value="{DynamicResource Double18}" />
         <Setter Property="HorizontalContentAlignment" Value="Left" />
         <Setter Property="Padding" Value="5,0,0,2" />
         <Setter Property="VerticalContentAlignment" Value="Bottom" />
@@ -110,10 +113,59 @@
             </Setter.Value>
         </Setter>
     </Style>
+    <Style x:Key="AxleInfoButtonStyle4" TargetType="Button">
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="Button">
+                    <ContentPresenter />
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+        <Setter Property="ContentTemplate">
+            <Setter.Value>
+                <DataTemplate DataType="model:AxleBitUnit">
+                    <Border x:Name="Part_Border" Background="Black">
+                        <Grid>
+                            <TextBlock
+                                x:Name="Part_text1"
+                                Margin="2,0,0,2"
+                                HorizontalAlignment="Left"
+                                VerticalAlignment="Bottom"
+                                FontSize="{DynamicResource Double18}"
+                                Text="{Binding AxleBitValue}" />
+                        </Grid>
+                    </Border>
+                    <DataTemplate.Triggers>
+                        <DataTrigger Binding="{Binding IsFault}" Value="True">
+                            <Setter TargetName="Part_text1" Property="Foreground" Value="Red" />
+                            <Setter TargetName="Part_text1" Property="Text" Value="{Binding AxleBitValue}" />
+                        </DataTrigger>
+                        <DataTrigger Binding="{Binding IsOpne}" Value="True">
+                            <Setter TargetName="Part_text1" Property="Foreground" Value="White" />
+                            <Setter TargetName="Part_text1" Property="Text" Value="XXX" />
+                        </DataTrigger>
+                        <DataTrigger Binding="{Binding IsShortCircuit}" Value="True">
+                            <Setter TargetName="Part_text1" Property="Foreground" Value="White" />
+                            <Setter TargetName="Part_text1" Property="Text" Value="———" />
+                        </DataTrigger>
+                        <MultiDataTrigger>
+                            <MultiDataTrigger.Conditions>
+                                <Condition Binding="{Binding IsFault}" Value="False" />
+                                <Condition Binding="{Binding IsOpne}" Value="False" />
+                                <Condition Binding="{Binding IsShortCircuit}" Value="False" />
+                            </MultiDataTrigger.Conditions>
+                            <Setter TargetName="Part_text1" Property="Text" Value="{Binding AxleBitValue, StringFormat={}{0:F0}}" />
+                            <Setter TargetName="Part_text1" Property="Foreground" Value="White" />
+                        </MultiDataTrigger>
+                    </DataTemplate.Triggers>
+                </DataTemplate>
+            </Setter.Value>
+        </Setter>
+    </Style>
     <Style x:Key="AxleInfoButtonTextStyle4" TargetType="Button">
         <Setter Property="Background" Value="Transparent" />
         <Setter Property="Foreground" Value="White" />
-        <Setter Property="FontSize" Value="{StaticResource Double18}" />
+        <Setter Property="FontSize" Value="{DynamicResource Double18}" />
         <Setter Property="HorizontalContentAlignment" Value="Left" />
         <Setter Property="Padding" Value="5,0,0,2" />
         <Setter Property="VerticalContentAlignment" Value="Bottom" />
