--- a/Train/Engine.TCMS.Turkmenistan/Src/Engine.TCMS.Turkmenistan/Resources/Styles/TurkmenistanItemControlStyle.xaml
+++ b/Train/Engine.TCMS.Turkmenistan/Src/Engine.TCMS.Turkmenistan/Resources/Styles/TurkmenistanItemControlStyle.xaml
@@ -1,16 +1,17 @@
-﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    xmlns:model="clr-namespace:Engine.TCMS.Turkmenistan.Model">
+﻿<ResourceDictionary
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:model="clr-namespace:Engine.TCMS.Turkmenistan.Model">
     <ResourceDictionary.MergedDictionaries>
-        <ResourceDictionary Source="../Base/TurkmenistanBaseResource.xaml"></ResourceDictionary>
+        <ResourceDictionary Source="../Base/TurkmenistanBaseResource.xaml" />
     </ResourceDictionary.MergedDictionaries>
 
-    <Style TargetType="ItemsControl" x:Key="MainDistanceScalStyle">
+    <Style x:Key="MainDistanceScalStyle" TargetType="ItemsControl">
         <Style.Setters>
             <Setter Property="RenderTransformOrigin" Value="0.5,0.5" />
             <Setter Property="HorizontalAlignment" Value="Stretch" />
             <Setter Property="VerticalAlignment" Value="Stretch" />
-            <Setter Property="Background" Value="{StaticResource BackgroudBrush}"></Setter>
+            <Setter Property="Background" Value="{DynamicResource BackgroudBrush}" />
 
             <Setter Property="RenderTransform">
                 <Setter.Value>
@@ -24,18 +25,11 @@
                     </ItemsPanelTemplate>
                 </Setter.Value>
             </Setter>
-            <Setter Property="FontSize" Value="{StaticResource Double16}"></Setter>
+            <Setter Property="FontSize" Value="{DynamicResource Double16}" />
             <Setter Property="ItemTemplate">
                 <Setter.Value>
                     <DataTemplate DataType="model:ITargitDistanceScaleItem">
-                        <Border Width="{Binding RelativeSource={RelativeSource FindAncestor,
-                                                                               AncestorType=ItemsControl},
-                                                Path=ActualWidth}"
-                                Height="{Binding RelativeSource={RelativeSource FindAncestor,
-                                                                                AncestorType=ItemsControl},
-                                                 Path=ActualHeight}"
-                                
-                                >
+                        <Border Width="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType=ItemsControl}, Path=ActualWidth}" Height="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType=ItemsControl}, Path=ActualHeight}">
                             <Grid>
                                 <Grid.ColumnDefinitions>
                                     <ColumnDefinition Width="55*" />
@@ -43,12 +37,11 @@
                                     <ColumnDefinition Width="55*" />
                                 </Grid.ColumnDefinitions>
                                 <Canvas x:Name="ItemCanvas0" Grid.Column="0">
-                                    <Line Stroke="{StaticResource MainTextBrushOne}"
-                                          StrokeThickness="{Binding Path=DegreeLength,
-                                                                    Converter={StaticResource TargetDistanceScalLengthToLineTicknessConverter}}"
-                                          X2="0"
-                                          Y2="{Binding RelativeSource={RelativeSource Self},
-                                                       Path=Y1}">
+                                    <Line
+                                        Stroke="{DynamicResource MainTextBrushOne}"
+                                        StrokeThickness="{Binding Path=DegreeLength, Converter={StaticResource TargetDistanceScalLengthToLineTicknessConverter}}"
+                                        X2="0"
+                                        Y2="{Binding RelativeSource={RelativeSource Self}, Path=Y1}">
                                         <Line.X1>
                                             <MultiBinding Converter="{StaticResource MathConverter}" ConverterParameter="x*y">
                                                 <Binding Path="DegreeLength" />
@@ -64,14 +57,13 @@
                                     </Line>
                                 </Canvas>
                                 <Canvas Grid.Column="1">
-                                    <TextBlock Width="{Binding RelativeSource={RelativeSource FindAncestor,
-                                                                                              AncestorType=Canvas},
-                                                               Path=ActualWidth}"
-                                               FontWeight="Bold"
-                                               Foreground="{StaticResource MainTextBrushOne}"
-                                               RenderTransformOrigin="0.5,0.25"
-                                               Text="{Binding Text}"
-                                               TextAlignment="Center">
+                                    <TextBlock
+                                        Width="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType=Canvas}, Path=ActualWidth}"
+                                        FontWeight="Bold"
+                                        Foreground="{DynamicResource MainTextBrushOne}"
+                                        RenderTransformOrigin="0.5,0.25"
+                                        Text="{Binding Text}"
+                                        TextAlignment="Center">
                                         <TextBlock.RenderTransform>
                                             <ScaleTransform ScaleY="-1" />
                                         </TextBlock.RenderTransform>
@@ -84,14 +76,11 @@
                                     </TextBlock>
                                 </Canvas>
                                 <Canvas x:Name="ItemCanvas" Grid.Column="2">
-                                    <Line Stroke="{StaticResource MainTextBrushOne}"
-                                          StrokeThickness="{Binding Path=DegreeLength,
-                                                                    Converter={StaticResource TargetDistanceScalLengthToLineTicknessConverter}}"
-                                          X2="{Binding RelativeSource={RelativeSource FindAncestor,
-                                                                                      AncestorType=Canvas},
-                                                       Path=ActualWidth}"
-                                          Y2="{Binding RelativeSource={RelativeSource Self},
-                                                       Path=Y1}">
+                                    <Line
+                                        Stroke="{DynamicResource MainTextBrushOne}"
+                                        StrokeThickness="{Binding Path=DegreeLength, Converter={StaticResource TargetDistanceScalLengthToLineTicknessConverter}}"
+                                        X2="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType=Canvas}, Path=ActualWidth}"
+                                        Y2="{Binding RelativeSource={RelativeSource Self}, Path=Y1}">
                                         <Line.X1>
                                             <MultiBinding Converter="{StaticResource MathConverter}" ConverterParameter="(1-x)*y">
                                                 <Binding Path="DegreeLength" />
@@ -114,12 +103,12 @@
             </Setter>
         </Style.Setters>
     </Style>
-    <Style TargetType="ItemsControl" x:Key="MainDistanceScalStyle1">
+    <Style x:Key="MainDistanceScalStyle1" TargetType="ItemsControl">
         <Style.Setters>
             <Setter Property="RenderTransformOrigin" Value="0.5,0.5" />
             <Setter Property="HorizontalAlignment" Value="Stretch" />
             <Setter Property="VerticalAlignment" Value="Stretch" />
-            <Setter Property="Background" Value="{StaticResource BackgroudBrush}"></Setter>
+            <Setter Property="Background" Value="{DynamicResource BackgroudBrush}" />
 
             <Setter Property="RenderTransform">
                 <Setter.Value>
@@ -133,18 +122,11 @@
                     </ItemsPanelTemplate>
                 </Setter.Value>
             </Setter>
-            <Setter Property="FontSize" Value="{StaticResource Double16}"></Setter>
+            <Setter Property="FontSize" Value="{DynamicResource Double16}" />
             <Setter Property="ItemTemplate">
                 <Setter.Value>
                     <DataTemplate DataType="model:ITargitDistanceScaleItem">
-                        <Border Width="{Binding RelativeSource={RelativeSource FindAncestor,
-                                                                               AncestorType=ItemsControl},
-                                                Path=ActualWidth}"
-                                Height="{Binding RelativeSource={RelativeSource FindAncestor,
-                                                                                AncestorType=ItemsControl},
-                                                 Path=ActualHeight}"
-                                
-                        >
+                        <Border Width="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType=ItemsControl}, Path=ActualWidth}" Height="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType=ItemsControl}, Path=ActualHeight}">
                             <Grid>
                                 <Grid.ColumnDefinitions>
                                     <ColumnDefinition Width="55*" />
@@ -152,12 +134,11 @@
                                     <ColumnDefinition Width="55*" />
                                 </Grid.ColumnDefinitions>
                                 <Canvas x:Name="ItemCanvas" Grid.Column="0">
-                                    <Line Stroke="{StaticResource MainTextBrushOne}"
-                                          StrokeThickness="{Binding Path=DegreeLength,
-                                                                    Converter={StaticResource TargetDistanceScalLengthToLineTicknessConverter}}"
-                                          X2="0"
-                                          Y2="{Binding RelativeSource={RelativeSource Self},
-                                                       Path=Y1}">
+                                    <Line
+                                        Stroke="{DynamicResource MainTextBrushOne}"
+                                        StrokeThickness="{Binding Path=DegreeLength, Converter={StaticResource TargetDistanceScalLengthToLineTicknessConverter}}"
+                                        X2="0"
+                                        Y2="{Binding RelativeSource={RelativeSource Self}, Path=Y1}">
                                         <Line.X1>
                                             <MultiBinding Converter="{StaticResource MathConverter}" ConverterParameter="x*y">
                                                 <Binding Path="DegreeLength" />
@@ -173,13 +154,13 @@
                                     </Line>
                                 </Canvas>
                                 <Canvas Grid.Column="1">
-                                    <TextBlock 
-                                               FontWeight="Bold"
-                                               Foreground="{StaticResource MainTextBrushOne}"
-                                               RenderTransformOrigin="0.5,0.25"
-                                               Text="{Binding Text}"
-                                               HorizontalAlignment="Left"
-                                               TextAlignment="Center">
+                                    <TextBlock
+                                        HorizontalAlignment="Left"
+                                        FontWeight="Bold"
+                                        Foreground="{DynamicResource MainTextBrushOne}"
+                                        RenderTransformOrigin="0.5,0.25"
+                                        Text="{Binding Text}"
+                                        TextAlignment="Center">
                                         <TextBlock.RenderTransform>
                                             <ScaleTransform ScaleY="-1" />
                                         </TextBlock.RenderTransform>
@@ -191,7 +172,7 @@
                                         </Canvas.Top>
                                     </TextBlock>
                                 </Canvas>
-                             
+
                             </Grid>
                         </Border>
 
@@ -201,12 +182,12 @@
         </Style.Setters>
     </Style>
 
-    <Style TargetType="ItemsControl" x:Key="MainDistanceScalStyle2">
+    <Style x:Key="MainDistanceScalStyle2" TargetType="ItemsControl">
         <Style.Setters>
             <Setter Property="RenderTransformOrigin" Value="0.5,0.5" />
             <Setter Property="HorizontalAlignment" Value="Stretch" />
             <Setter Property="VerticalAlignment" Value="Stretch" />
-            <Setter Property="Background" Value="Transparent"></Setter>
+            <Setter Property="Background" Value="Transparent" />
 
             <Setter Property="RenderTransform">
                 <Setter.Value>
@@ -220,18 +201,11 @@
                     </ItemsPanelTemplate>
                 </Setter.Value>
             </Setter>
-            <Setter Property="FontSize" Value="{StaticResource Double16}"></Setter>
+            <Setter Property="FontSize" Value="{DynamicResource Double16}" />
             <Setter Property="ItemTemplate">
                 <Setter.Value>
                     <DataTemplate DataType="model:ITargitDistanceScaleItem">
-                        <Border Width="{Binding RelativeSource={RelativeSource FindAncestor,
-                                                                               AncestorType=ItemsControl},
-                                                Path=ActualWidth}"
-                                Height="{Binding RelativeSource={RelativeSource FindAncestor,
-                                                                                AncestorType=ItemsControl},
-                                                 Path=ActualHeight}"
-                                
-                        >
+                        <Border Width="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType=ItemsControl}, Path=ActualWidth}" Height="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType=ItemsControl}, Path=ActualHeight}">
                             <Grid>
                                 <Grid.ColumnDefinitions>
                                     <ColumnDefinition Width="55*" />
@@ -239,14 +213,11 @@
                                     <ColumnDefinition Width="55*" />
                                 </Grid.ColumnDefinitions>
                                 <Canvas x:Name="ItemCanvas" Grid.Column="2">
-                                    <Line Stroke="{StaticResource MainTextBrushOne}"
-                                          StrokeThickness="{Binding Path=DegreeLength,
-                                                                    Converter={StaticResource TargetDistanceScalLengthToLineTicknessConverter}}"
-                                          X2="{Binding RelativeSource={RelativeSource FindAncestor,
-                                                                                      AncestorType=Canvas},
-                                                       Path=ActualWidth}"
-                                          Y2="{Binding RelativeSource={RelativeSource Self},
-                                                       Path=Y1}">
+                                    <Line
+                                        Stroke="{DynamicResource MainTextBrushOne}"
+                                        StrokeThickness="{Binding Path=DegreeLength, Converter={StaticResource TargetDistanceScalLengthToLineTicknessConverter}}"
+                                        X2="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType=Canvas}, Path=ActualWidth}"
+                                        Y2="{Binding RelativeSource={RelativeSource Self}, Path=Y1}">
                                         <Line.X1>
                                             <MultiBinding Converter="{StaticResource MathConverter}" ConverterParameter="(1-x)*y">
                                                 <Binding Path="DegreeLength" />
@@ -262,13 +233,13 @@
                                     </Line>
                                 </Canvas>
                                 <Canvas Grid.Column="1" HorizontalAlignment="Right">
-                                    <TextBlock 
-                                        FontWeight="Bold"
-                                        Foreground="{StaticResource MainTextBrushOne}"
-                                        RenderTransformOrigin="0.5,0.25"
+                                    <TextBlock
                                         Canvas.Right="5"
-                                        Text="{Binding Text}"
                                         HorizontalAlignment="Right"
+                                        FontWeight="Bold"
+                                        Foreground="{DynamicResource MainTextBrushOne}"
+                                        RenderTransformOrigin="0.5,0.25"
+                                        Text="{Binding Text}"
                                         TextAlignment="Right">
                                         <TextBlock.RenderTransform>
                                             <ScaleTransform ScaleY="-1" />
