--- a/Train/Engine.TCMS.Turkmenistan/Src/Engine.TCMS.Turkmenistan/View/Contents/ProgressBar/ReconnectionProgressBarView.xaml
+++ b/Train/Engine.TCMS.Turkmenistan/Src/Engine.TCMS.Turkmenistan/View/Contents/ProgressBar/ReconnectionProgressBarView.xaml
@@ -1,18 +1,19 @@
-﻿<UserControl x:Class="Engine.TCMS.Turkmenistan.View.Contents.ProgressBar.ReconnectionProgressBarView"
-             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:Engine.TCMS.Turkmenistan.View.Contents.ProgressBar"
-             xmlns:viewModel="clr-namespace:Engine.TCMS.Turkmenistan.ViewModel"
-             xmlns:common="clr-namespace:Engine.TCMS.Turkmenistan.View.Common"
-             xmlns:model="clr-namespace:Engine.TCMS.Turkmenistan.Model"
-             d:DataContext="{d:DesignInstance viewModel:DomainViewModel}"
-             mc:Ignorable="d" 
-             d:DesignHeight="430" d:DesignWidth="530">
+﻿<UserControl
+    x:Class="Engine.TCMS.Turkmenistan.View.Contents.ProgressBar.ReconnectionProgressBarView"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:common="clr-namespace:Engine.TCMS.Turkmenistan.View.Common"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:local="clr-namespace:Engine.TCMS.Turkmenistan.View.Contents.ProgressBar"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:model="clr-namespace:Engine.TCMS.Turkmenistan.Model"
+    xmlns:viewModel="clr-namespace:Engine.TCMS.Turkmenistan.ViewModel"
+    d:DataContext="{d:DesignInstance viewModel:DomainViewModel}"
+    d:DesignHeight="430"
+    d:DesignWidth="530"
+    mc:Ignorable="d">
     <Grid>
-        <Border
-            Style="{DynamicResource MainBorderStyle}">
+        <Border Style="{DynamicResource MainBorderStyle}">
             <Grid>
                 <Grid.RowDefinitions>
                     <RowDefinition Height="25*" />
@@ -126,7 +127,7 @@
                                 </Grid.ColumnDefinitions>
                                 <ProgressBar
                                     Grid.Column="0"
-                                    Maximum="120"
+                                    Maximum="1120"
                                     Style="{DynamicResource ProgressBarOrdinaryStyle}"
                                     Value="{Binding Model.MainModel.OilPressure}" />
                                 <Canvas Grid.Column="1" Panel.ZIndex="1">
@@ -159,7 +160,7 @@
                                     Style="{DynamicResource MainDistanceScalStyle}" />
                                 <ProgressBar
                                     Grid.Column="2"
-                                    Maximum="120"
+                                    Maximum="1120"
                                     Style="{DynamicResource ProgressBarOrdinaryStyle}"
                                     Value="{Binding Model.MainModel.FuelPressure}" />
                             </Grid>
