--- a/Train/Engine.TCMS.Turkmenistan/Src/Engine.TCMS.Turkmenistan/View/Contents/RunParam/RunParamPage2.xaml
+++ b/Train/Engine.TCMS.Turkmenistan/Src/Engine.TCMS.Turkmenistan/View/Contents/RunParam/RunParamPage2.xaml
@@ -1,5 +1,5 @@
 ﻿<UserControl
-    x:Class="Engine.TCMS.Turkmenistan.View.Contents.RunParam.CurrentRunparamView"
+    x:Class="Engine.TCMS.Turkmenistan.View.Contents.RunParam.RunParamPage2"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:common="clr-namespace:Engine.TCMS.Turkmenistan.View.Common"
@@ -99,6 +99,59 @@
                                 Foreground="White"
                                 Text="{DynamicResource RunParam}" />
                         </Border>
+                        <Grid Grid.Row="1" Margin="10,10,0,10">
+                            <Grid.RowDefinitions>
+                                <RowDefinition />
+                                <RowDefinition />
+                                <RowDefinition />
+                                <RowDefinition />
+                                <RowDefinition />
+                                <RowDefinition />
+                                <RowDefinition />
+                                <RowDefinition />
+                                <RowDefinition />
+                                <RowDefinition />
+                                <RowDefinition />
+                                <RowDefinition />
+                                <RowDefinition />
+                            </Grid.RowDefinitions>
+                            <Grid Grid.Row="0">
+                                <TextBlock Style="{DynamicResource RunParamTextStyle2}" Text="{DynamicResource ColdFanSpped1}" />
+                                <TextBlock Style="{DynamicResource RunParamTextStyle4}" Text="{Binding Model.RunParamModel.CoolingFanSpeed1, StringFormat={}{0:F0} r/min}" />
+                            </Grid>
+                            <Grid Grid.Row="1">
+                                <TextBlock Style="{DynamicResource RunParamTextStyle2}" Text="{DynamicResource ColdFanSpped2}" />
+                                <TextBlock Style="{DynamicResource RunParamTextStyle4}" Text="{Binding Model.RunParamModel.CoolingFanSpeed2, StringFormat={}{0:F0} r/min}" />
+                            </Grid>
+                            <Grid Grid.Row="2">
+                                <TextBlock Style="{DynamicResource RunParamTextStyle2}" Text="{DynamicResource ExciterCurrent}" />
+                                <TextBlock Style="{DynamicResource RunParamTextStyle4}" Text="{Binding Model.RunParamModel.ExciterCurrent, StringFormat={}{0:F0}     A}" />
+                            </Grid>
+                            <Grid Grid.Row="4">
+                                <TextBlock Style="{DynamicResource RunParamTextStyle2}" Text="{DynamicResource MainGeneratorExciterCurrent}" />
+                                <TextBlock Style="{DynamicResource RunParamTextStyle4}" Text="{Binding Model.RunParamModel.MainGeneratorExciterCurrent, StringFormat={}{0:F0}     A}" />
+                            </Grid>
+                            <Grid Grid.Row="5">
+                                <TextBlock Style="{DynamicResource RunParamTextStyle2}" Text="{DynamicResource EarthLeakageCurrent}" />
+                                <TextBlock Style="{DynamicResource RunParamTextStyle4}" Text="{Binding Model.RunParamModel.EarthLeakageCurrent, StringFormat={}{0:F0}  mA}" />
+                            </Grid>
+                            <Grid Grid.Row="6">
+                                <TextBlock Style="{DynamicResource RunParamTextStyle2}" Text="{DynamicResource FrontTurbochargerSpeed}" />
+                                <TextBlock Style="{DynamicResource RunParamTextStyle4}" Text="{Binding Model.RunParamModel.FrontTurbochargerSpeed, StringFormat={}{0:F0} r/min}" />
+                            </Grid>
+                            <Grid Grid.Row="7">
+                                <TextBlock Style="{DynamicResource RunParamTextStyle2}" Text="{DynamicResource AfterTurbochargerSpeed}" />
+                                <TextBlock Style="{DynamicResource RunParamTextStyle4}" Text="{Binding Model.RunParamModel.AfterTurbochargerSpeed, StringFormat={}{0:F0} r/min}" />
+                            </Grid>
+                            <Grid Grid.Row="8">
+                                <TextBlock Style="{DynamicResource RunParamTextStyle2}" Text="{DynamicResource ReducedPowerLoopTemperature1}" />
+                                <TextBlock Style="{DynamicResource RunParamTextStyle4}" Text="{Binding Model.RunParamModel.ReducedPowerLoopTemperature1, StringFormat={}{0:F0}      ℃}" />
+                            </Grid>
+                            <Grid Grid.Row="9">
+                                <TextBlock Style="{DynamicResource RunParamTextStyle2}" Text="{DynamicResource ReducedPowerLoopTemperature2}" />
+                                <TextBlock Style="{DynamicResource RunParamTextStyle4}" Text="{Binding Model.RunParamModel.ReducedPowerLoopTemperature2, StringFormat={}{0:F0}      ℃}" />
+                            </Grid>
+                        </Grid>
                     </Grid>
                 </Border>
 
